Stopped horizontal scrolling.

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
   background-color: #1e1e1e;
+  position: relative
 }
